// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FollowListItem should render 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginBottom": 16,
      }
    }
  >
    <Image
      fadeDuration={250}
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/600/400/?random",
            "url": "https://picsum.photos/600/400/?random",
          },
        ]
      }
      style={
        Object {
          "backgroundColor": "#A5A5A5",
          "borderRadius": 32,
          "height": 64,
          "marginRight": 16,
          "width": 64,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    />
    <View
      bordered={false}
      disabled={false}
      pill={false}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00676D",
          "borderColor": "#00676D",
          "borderRadius": 8,
          "borderWidth": 2,
          "elevation": 2,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "center",
          "marginLeft": 8,
          "opacity": 1,
          "overflow": "hidden",
          "paddingHorizontal": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontFamily": "InterUI-Bold",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        Follow
      </Text>
    </View>
  </View>,
]
`;

exports[`FollowListItem should render a follower request 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginBottom": 16,
      }
    }
  >
    <Image
      fadeDuration={250}
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/600/400/?random",
            "url": "https://picsum.photos/600/400/?random",
          },
        ]
      }
      style={
        Object {
          "backgroundColor": "#A5A5A5",
          "borderRadius": 32,
          "height": 64,
          "marginRight": 16,
          "width": 64,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    />
    <View
      bordered={false}
      disabled={false}
      pill={false}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#A5A5A5",
          "borderColor": "#A5A5A5",
          "borderRadius": 8,
          "borderWidth": 2,
          "elevation": 2,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "center",
          "marginLeft": 8,
          "opacity": 1,
          "overflow": "hidden",
          "paddingHorizontal": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Bold",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        Hide
      </Text>
    </View>
    <View
      bordered={false}
      disabled={false}
      pill={false}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00676D",
          "borderColor": "#00676D",
          "borderRadius": 8,
          "borderWidth": 2,
          "elevation": 2,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "center",
          "marginLeft": 8,
          "opacity": 1,
          "overflow": "hidden",
          "paddingHorizontal": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontFamily": "InterUI-Bold",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        Confirm
      </Text>
    </View>
  </View>,
]
`;

exports[`FollowListItem should render a follower suggestion 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginBottom": 16,
      }
    }
  >
    <Image
      fadeDuration={250}
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/600/400/?random",
            "url": "https://picsum.photos/600/400/?random",
          },
        ]
      }
      style={
        Object {
          "backgroundColor": "#A5A5A5",
          "borderRadius": 32,
          "height": 64,
          "marginRight": 16,
          "width": 64,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    />
    <View
      bordered={false}
      disabled={false}
      pill={false}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00676D",
          "borderColor": "#00676D",
          "borderRadius": 8,
          "borderWidth": 2,
          "elevation": 2,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "center",
          "marginLeft": 8,
          "opacity": 1,
          "overflow": "hidden",
          "paddingHorizontal": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontFamily": "InterUI-Bold",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        Follow
      </Text>
    </View>
  </View>,
]
`;

exports[`FollowListItem should render a loading state 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginBottom": 16,
      }
    }
  >
    <Image
      fadeDuration={250}
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/600/400/?random",
            "url": "https://picsum.photos/600/400/?random",
          },
        ]
      }
      style={
        Object {
          "backgroundColor": "#A5A5A5",
          "borderRadius": 32,
          "height": 64,
          "marginRight": 16,
          "width": 64,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 14,
            "marginVertical": 3.5,
            "width": "60%",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#A5A5A5",
          "borderRadius": 8,
          "height": 32,
          "marginLeft": 8,
          "paddingHorizontal": 8,
          "width": 64,
        }
      }
    />
  </View>,
]
`;

exports[`FollowListItem should render with a name 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginBottom": 16,
      }
    }
  >
    <Image
      fadeDuration={250}
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/600/400/?random",
            "url": "https://picsum.photos/600/400/?random",
          },
        ]
      }
      style={
        Object {
          "backgroundColor": "#A5A5A5",
          "borderRadius": 32,
          "height": 64,
          "marginRight": 16,
          "width": 64,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Medium",
            "fontSize": 14,
            "lineHeight": 21,
          }
        }
      >
        Joe Schmoe
      </Text>
    </View>
    <View
      bordered={false}
      disabled={false}
      pill={false}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00676D",
          "borderColor": "#00676D",
          "borderRadius": 8,
          "borderWidth": 2,
          "elevation": 2,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "center",
          "marginLeft": 8,
          "opacity": 1,
          "overflow": "hidden",
          "paddingHorizontal": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontFamily": "InterUI-Bold",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        Follow
      </Text>
    </View>
  </View>,
]
`;
